# RA3yui_bot_nonebot2

./: README.md  bot.py  pyproject.toml
bkimg/: Ra3dataBase.xls  Ra3dataBasepl2.xls
data/: data.sqlite3
db/bili_push/: group_config.toml
exl/: Ra3dataBase.xls
yui/plugins/ra3/: __init__.py
yui/plugins/ra3/plugins/: fj.py  peapo.py  pm.py  ra3s.py  rmph.py
yui/plugins/werd/: __init__.py
yui/plugins/werd/plugins/: 7t.py  cfc.py  cxsj.py  dw.py  hj.py  jc.py  jg.py  lb.py  sl.py  what.py  what2.py  xl.py
yui_bot2/plugins/bk/: __init__.py
yui_bot2/plugins/bk/plugins/: 7t.py  cxsj.py  dw.py  hj.py  jg.py  sl.py  what.py  what2.py  xl.py
yui_bot2/plugins/play_yui/plugins/: player.py
yui_bot2/plugins/ra3battlenet/plugins/: Map.py  corona.py  ph.py  pm.py  ra3.py  rmph.py
yui_bot2/plugins/wordstock/: __init__.py  config.py
yui_bot2/plugins/wordstock/plugins/: bz.py  cfc.py  ha.py  jc.py  lb.py
