[project]
name = "yui_bot2"
version = "0.1.0"
description = "yui_bot2"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_simplemusic","haruka_bot",  "nonebot_plugin_analysis_bilibili"]
plugin_dirs = ["yui_bot2/plugins"]
builtin_plugins = ["echo"]
